--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,16 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+target/
+.idea/
 
 # Package Files #
 *.jar
 *.war
 *.ear
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+dependency-reduced-pom.xml
