--- a/niubi-job-master-slave/pom.xml
+++ b/niubi-job-master-slave/pom.xml
@@ -14,7 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
-            <artifactId>niubi-job-cluster</artifactId>
+            <artifactId>niubi-job-scheduler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zuoxiaolong</groupId>
+            <artifactId>niubi-job-api</artifactId>
         </dependency>
     </dependencies>
 </project>
