--- a/niubi-job-example-spring/pom.xml
+++ b/niubi-job-example-spring/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
-            <artifactId>niubi-job-scheduler</artifactId>
+            <artifactId>niubi-job-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
