--- a/niubi-job-example-common/pom.xml
+++ b/niubi-job-example-common/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-scheduler</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
