--- a/niubi-job-example-spring/pom.xml
+++ b/niubi-job-example-spring/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>niubi-job-spring</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.zuoxiaolong</groupId>
+            <artifactId>niubi-job-scheduler</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
