--- a/niubi-job-example-common/pom.xml
+++ b/niubi-job-example-common/pom.xml
@@ -32,6 +32,7 @@
                 </dependencies>
             </dependencyManagement>
             <build>
+                <finalName>niubi-job-example-common</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
