--- a/niubi-job-example-spring/pom.xml
+++ b/niubi-job-example-spring/pom.xml
@@ -40,6 +40,7 @@
                 </dependencies>
             </dependencyManagement>
             <build>
+                <finalName>niubi-job-example-spring</finalName>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
