--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <niubi.job.version>1.0-SNAPSHOT</niubi.job.version>
+        <niubi.job.version>0.9.2</niubi.job.version>
         <lombok.version>1.16.6</lombok.version>
         <spring.version>4.2.4.RELEASE</spring.version>
         <curator.version>2.7.0</curator.version>
@@ -28,11 +28,6 @@
             <dependency>
                 <groupId>com.zuoxiaolong</groupId>
                 <artifactId>niubi-job-core</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-cluster</artifactId>
                 <version>${niubi.job.version}</version>
             </dependency>
             <dependency>
@@ -53,16 +48,6 @@
             <dependency>
                 <groupId>com.zuoxiaolong</groupId>
                 <artifactId>niubi-job-scheduler</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-service</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-persistent</artifactId>
                 <version>${niubi.job.version}</version>
             </dependency>
 
