--- a/niubi-job-example-common/pom.xml
+++ b/niubi-job-example-common/pom.xml
@@ -12,21 +12,24 @@
     <artifactId>niubi-job-example-common</artifactId>
 
     <dependencies>
+        <!-- 如果要本地测试必须引入该jar包 -->
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-scheduler</artifactId>
+            <version>0.9.2</version>
         </dependency>
     </dependencies>
 
     <profiles>
         <profile>
+            <!-- 进行打包时,必须启用release这个profile,否则任务将无法被正常加载 -->
             <id>release</id>
             <dependencyManagement>
                 <dependencies>
                     <dependency>
                         <groupId>com.zuoxiaolong</groupId>
                         <artifactId>niubi-job-scheduler</artifactId>
-                        <version>1.0-SNAPSHOT</version>
+                        <version>0.9.2</version>
                         <scope>provided</scope>
                     </dependency>
                 </dependencies>
