--- a/niubi-job-example-common/pom.xml
+++ b/niubi-job-example-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>niubi-job-examples</artifactId>
         <groupId>com.zuoxiaolong</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.9.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-scheduler</artifactId>
-            <version>0.9.2</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
@@ -29,7 +29,7 @@
                     <dependency>
                         <groupId>com.zuoxiaolong</groupId>
                         <artifactId>niubi-job-scheduler</artifactId>
-                        <version>0.9.2</version>
+                        <version>${project.version}</version>
                         <scope>provided</scope>
                     </dependency>
                 </dependencies>
@@ -49,10 +49,12 @@
                                 </goals>
                                 <configuration>
                                     <transformers>
-                                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                        <transformer
+                                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                             <resource>META-INF/spring.handlers</resource>
                                         </transformer>
-                                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                        <transformer
+                                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                             <resource>META-INF/spring.schemas</resource>
                                         </transformer>
                                     </transformers>
