--- a/niubi-job-example-spring/pom.xml
+++ b/niubi-job-example-spring/pom.xml
@@ -5,31 +5,36 @@
     <parent>
         <artifactId>niubi-job-examples</artifactId>
         <groupId>com.zuoxiaolong</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.9.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>niubi-job-example-spring</artifactId>
+
+    <properties>
+        <niubi.job.version>0.9.2</niubi.job.version>
+        <spring.version>4.2.4.RELEASE</spring.version>
+    </properties>
 
     <dependencies>
         <!-- 为了本地测试,依旧要引入该包 -->
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-scheduler</artifactId>
-            <version>0.9.2</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- spring环境与非spring环境的任务最不同的就是spring环境的任务需要多引入这个包 -->
         <!-- 并且该包需要一起打到jar包当中 -->
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-spring</artifactId>
-            <version>0.9.2</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- 这是spring的jar包 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
@@ -42,7 +47,7 @@
                     <dependency>
                         <groupId>com.zuoxiaolong</groupId>
                         <artifactId>niubi-job-scheduler</artifactId>
-                        <version>0.9.2</version>
+                        <version>${project.version}</version>
                         <scope>provided</scope>
                     </dependency>
                 </dependencies>
