--- a/niubi-job-test/pom.xml
+++ b/niubi-job-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>niubi-job-examples</artifactId>
         <groupId>com.zuoxiaolong</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.9.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,14 +15,17 @@
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-scheduler</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.zuoxiaolong</groupId>
             <artifactId>niubi-job-spring</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
