--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.zuoxiaolong</groupId>
     <artifactId>niubi-job-examples</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.9.3-SNAPSHOT</version>
     <modules>
         <module>niubi-job-test</module>
         <module>niubi-job-example-common</module>
@@ -16,53 +16,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <niubi.job.version>0.9.2</niubi.job.version>
         <lombok.version>1.16.6</lombok.version>
-        <spring.version>4.2.4.RELEASE</spring.version>
-        <curator.version>2.7.0</curator.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- compile -->
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-core</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-api</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-spring</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-scanner</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.zuoxiaolong</groupId>
-                <artifactId>niubi-job-scheduler</artifactId>
-                <version>${niubi.job.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.curator</groupId>
-                <artifactId>curator-examples</artifactId>
-                <version>${curator.version}</version>
-            </dependency>
-
             <!-- provided -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -85,6 +44,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
