--- a/niubi-job-example-spring/pom.xml
+++ b/niubi-job-example-spring/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>niubi-job-examples</artifactId>
         <groupId>com.zuoxiaolong</groupId>
-        <version>0.9.3</version>
+        <version>0.9.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>niubi-job-example-spring</artifactId>
 
     <properties>
-        <niubi.job.version>0.9.2</niubi.job.version>
+        <niubi.job.version>0.9.4-SNAPSHOT</niubi.job.version>
         <spring.version>4.2.4.RELEASE</spring.version>
     </properties>
 
